--- a/core/templates/core/create_cv_script.html
+++ b/core/templates/core/create_cv_script.html
@@ -235,12 +235,12 @@
 
                             '<div class="col" id="'+d+'">' +
                                 '<label>Start Date</label>' +
-                                '<input type="Enter Start Date" name="startdate" class="form-control" />' +
+                                '<input type="date" name="startdate" class="form-control" />' +
                             '</div>' +
 
                             '<div class="col" id="'+d+'">' +
                                 '<label>End Date</label>' +
-                                '<input type="Enter End Date" name="enddate" class="form-control" />' +
+                                '<input type="date" name="enddate" class="form-control" />' +
                             '</div>' +
 
                             '<div id="'+d+'" class="exp_del_btn col">' +
@@ -268,12 +268,12 @@
 
                             '<div class="col" id="'+f+'">' +
                                 '<label>Start Date</label>' +
-                                '<input type="Enter Start Date" name="startdate" class="form-control" />' +
+                                '<input type="date" name="startdate" class="form-control" />' +
                             '</div>' +
 
                             '<div class="col" id="'+f+'">' +
                                 '<label>End Date</label>' +
-                                '<input type="Enter End Date" name="enddate" class="form-control" />' +
+                                '<input type="date" name="enddate" class="form-control" />' +
                             '</div>' +
 
                             '<div id="'+f+'" class="pro_del_btn col">' +
