--- a/core/templates/core/create_cv.html
+++ b/core/templates/core/create_cv.html
@@ -90,7 +90,7 @@
                                 <div  class="form-group">
                                     <div class="row"  >
                                     <div class="col" >
-                                        <label>Biography</label>
+                                        <label>About Me</label>
                                         <textarea id="bio" placeholder="Compose Your Biography" cols="4" rows="5" class="form-control"></textarea>
                                         
                                     </div>
