--- a/core/templates/core/referee_view.html
+++ b/core/templates/core/referee_view.html
@@ -41,7 +41,7 @@
             <br>
             <br>
 
-            <div class=".update_referee_info" style="display:none;">
+            <div class="update_referee_info" style="display:none;">
                 <div class="table-responsive">
                     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                         <thead>
